# TRIKSTER-ORACLE

./: .env.example  .gitignore  .kanban_config.json  API_DOCUMENTATION.md  Architecture_Implementation_Summary.md  COMO_SUPERVISAR_JULES.md  COMPLETE_SESSION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_PLAN_SUMMARY.md  DNS_DIAG_REPORT.md  Dockerfile.viewer  EJECUTAR_JULES.md  FASE1_COMPLETA.md  FINAL_SESSION_SUMMARY.md  GITHUB_ISSUE_FOR_JULES.md  GLOSSARY.md  HOW_TO_USE_JULES.md  JULES_CALIBRATION_REPORT.md  JULES_MESSAGE.txt  JULES_TASK_MATURATION.md  JULES_WORK_ORDER.md  KANBAN.md  LICENSE  PROJECT_STATUS.md  PROJECT_STATUS_REPORT_2026-02-06.md  QUICK_START.md  README.md  RECOVERY_SUMMARY.md  ROADMAP.py  SESSION_SUMMARY_2026-02-05.md  STATUS_REPORT_2026-02-05.md  TASKS_FOR_JULES.md  antigravity_execute_production.py  antigravity_kernel_integration.py  antigravity_phase2_autowire.py  antigravity_roadmap_exec.py  calibrate_jules.py  continuation_m4_m6.py  diag_life.db  diag_life.jsonl  (+14 more)
backend/: .env.example  0.1.9  README.md  demo.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  error_handlers.py  logging.py  main.py
backend/app/api/: clean_oracle.py  oracle.py  routes.py  routes_v2.py  schemas.py  system.py
backend/app/config/: redis.py
backend/app/core/: __init__.py  config.py  distribution.py  engine.py  errors.py  explain.py  model.py  oracle_v2.py  redis_ledger.py  risk.py  spectral.py  token_types.py  tokens.py  uncertainty.py  zeta_entropy.json
backend/app/data/: __init__.py  sample_events.json
backend/app/middleware/: __init__.py  idempotency.py  rate_limit.py  request_id.py
backend/app/ratings/: ttt_adapter.py
backend/app/schemas/: contract_v2.py  error.py  output_contract.py  telemetry.py
backend/app/sim_kernel/: config.py  journal.py  scheduler.py  state.py
backend/app/tests/: __init__.py  test_api.py  test_distribution_v2.py  test_engine.py  test_error_contract.py  test_explain.py  test_idempotency.py  test_rate_limit.py  test_risk.py  (+2 more)
backend/tests/: test_hardening.py  test_priority_and_budget.py  test_scenarios_runner.py  test_sim_kernel_fifo.py  test_ttt_adapter_contract.py
backend/tools/: dns_verify.py  verify_error_contract.py
viewer/: app.py  attestation.py  logging_conf.py  pyproject.toml  web_config.py
viewer/middleware/: ratelimit.py  request_id.py
viewer/templates/: base.html  docs.html  index.html  privacy.html  report.html  terms.html
viewer/tests/: test_viewer.py
(+215 files in other folders)
